# arrow-cpp-python-nocopy

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: build.yml
arrow_python_nocopy/: __init__.py
arrow_python_nocopy/tests/: test_all.py
cmake/modules/: FindArrow.cmake  FindThrift.cmake
src/apn/: apn.c  apn.cpp  apn.h  apn.hpp  bridge.cpp  bridge.h
src/apn-python/: caster.h  caster.hpp  common.cpp  common.h  common.hpp  cpython.cpp  cpython.h  cpython.hpp  pybind11.cpp  pybind11.h  pybind11.hpp
src/arrow-python-nocopy/: arrow-python-nocopy.cpp  arrow-python-nocopy.hpp
src/arrow-python-nocopy/python/: caster.hpp  extension.cpp  extension.hpp
